Add endpoint for stream load testing
